[package]
name = "idena_api"
version = "0.1.0"
authors = ["eggmund <joshuacolclough2@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
